新增业务组件：order订单组件

--- a/settings.gradle
+++ b/settings.gradle
@@ -15,3 +15,5 @@ dependencyResolutionManagement {
 rootProject.name = "Component-Strategy"
 include ':app'
 include ':common'
+include ':order'
+include ':product'
