--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdk versions.android.compileSdk
 
     defaultConfig {
-        minSdk 21
-        targetSdk 31
+        minSdk versions.android.minSdk
+        targetSdk versions.android.targetSdk
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
