--- a/app_logic/src/main/AndroidManifest.xml
+++ b/app_logic/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hudson.component">
+    package="com.hudson.logic">
 
     <application
         android:allowBackup="true"
@@ -10,8 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ComponentStrategy">
         <activity
-            android:name=".AppSplashActivity"
-            android:theme="@style/SplashActivityTheme"
+            android:name=".AppMainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
