--- a/product/build.gradle
+++ b/product/build.gradle
@@ -38,6 +38,20 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    sourceSets {
+        main{
+            if(flags.isRelease){
+                manifest.srcFile 'src/main/AndroidManifest.xml'
+                // 打包时要排除掉dev目录
+                java {
+                    exclude 'src/main/dev/'
+                }
+            }else{
+                manifest.srcFile 'src/main/dev/AndroidManifest.xml'
+            }
+        }
+    }
 }
 
 dependencies {
