业务组件的可测试性：增加仅非集成情况下的页面视图，以确保能够在开发阶段完成GUI验证

--- a/app_logic/src/main/dev/AndroidManifest.xml
+++ b/app_logic/src/main/dev/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ComponentStrategy">
         <activity
+            android:name=".DebugPageActivity"
+            android:exported="false" />
+        <activity
             android:name=".AppMainActivity"
             android:exported="true">
             <intent-filter>
