--- a/app_logic/build.gradle
+++ b/app_logic/build.gradle
@@ -41,12 +41,20 @@ android {
         main{
             if(flags.isRelease){
                 manifest.srcFile 'src/main/AndroidManifest.xml'
-                // 打包时要排除掉debug目录
+                // 打包时要排除掉dev目录
                 java {
-                    exclude '**/debug/**'
+                    exclude 'src/main/dev/'
                 }
             }else{
-                manifest.srcFile 'src/main/debug/AndroidManifest.xml'
+                manifest.srcFile 'src/main/dev/AndroidManifest.xml'
+
+                // 增加源码搜索路径 src/main/dev目录
+                java{
+                    srcDir 'src/main/dev'
+                }
+
+                // 参考 https://developer.android.com/studio/build/build-variants#sourcesets
+                res.srcDirs = ['src/main/res/', 'src/main/dev/res/']
             }
         }
     }
