--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,14 +32,15 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     // 依赖业务组件
     implementation project(":app_logic")
+    implementation project(":order")
+    implementation project(":product")
+
+    // 依赖基础功能组件
+    implementation project(":common")
 }
