组件化之路由：创建HRouter注解和注解处理器

--- a/settings.gradle
+++ b/settings.gradle
@@ -18,3 +18,5 @@ include ':common'
 include ':order'
 include ':product'
 include ':app_logic'
+include ':HRouter-Annotation'
+include ':HRouter-Annotation-Processor'
