--- a/app_logic/build.gradle
+++ b/app_logic/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 if(flags.isRelease){
@@ -69,6 +70,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    kapt project(":HRouter-Annotation-Processor")
 
     // 依赖基础功能组件
     implementation project(":common")
