--- a/settings.gradle
+++ b/settings.gradle
@@ -20,3 +20,4 @@ include ':product'
 include ':app_logic'
 include ':HRouter-Annotation'
 include ':HRouter-Annotation-Processor'
+include ':HRouter-Api'
