--- a/basic_gradle_config.gradle
+++ b/basic_gradle_config.gradle
@@ -15,4 +15,8 @@ ext {
         // 控制业务组件是否集成，如果是false，业务组件将作为应用程序方式运行，即构建产物是apk
         isRelease: true
     ]
+
+    hroute_info = [
+        packageName: "com.hudson.hrouter.generate"
+    ]
 }
