--- a/HRouter-Api/build.gradle
+++ b/HRouter-Api/build.gradle
@@ -12,6 +12,13 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+
+        // 路由包名
+        //这个方法接收三个非空的参数，第一个:确定值的类型；第二个:指定key的名字；第三个:传值(必须是String)
+        //为什么需要定义这个？因为src代码中有可能需要用到跨模块交互，如果是组件化模块显然不行
+        //切记:不能在android根节点，只能在defaultConfig或buildTypes节点下
+        // 最后一个字段如果是字符串，得像这样  "\"\""，
+        buildConfigField "String", "routeGenPkg", "\"${hroute_info.packageName}\""
     }
 
     buildTypes {
