--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,9 @@ dependencies {
     implementation project(":order")
     implementation project(":product")
 
+    // 依赖路由组件
+    implementation project(":HRouter-Api")
+
     // 依赖基础功能组件
     implementation project(":common")
 }
